--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-navigation/native": "^6.1.8",
+    "@react-navigation/native-stack": "^6.9.14",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-native": "^0.72.4",
+    "react-native-web": "^0.19.8",
+    "react-native-wheel-scrollview-picker": "^2.0.4",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
